--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@ body.light{--bg:#f6f7fb;--card:#ffffff;--muted:#566174;--accent:#ff6b3c;color-sc
     <button class="btn" id="menuBtn" aria-expanded="false">Menu</button>
   </div>
 </header>
+<marquee behavior="scroll" direction="left" scrollamount="8" style="font-size: 1.8rem; font-weight: bold; background: Transparent; color: white; padding: 1rem 0;">
+  🚀 Welcome to my Website 🚀
+</marquee>
 
 <main class="layout">
   <div>
