--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body.light{--bg:#f6f7fb;--card:#ffffff;--muted:#566174;--accent:#ff6b3c;color-sc
   <div>
     <section class="hero" aria-labelledby="heroTitle">
       <div class="meta">
-        <div class="eyebrow">Latest: Island Hopping in the Azores</div>
+        <div class="eyebrow">Traveling With me.</div>
         <h2 id="heroTitle">Hello Everyone In this website i will show you how i planned my Trips,Where I wnat to go and where i Go,which places should you stay,eat and also sightseeing.All the information about travelling in some place i will give you.</h2>
         <p>From Kashmir to Kanyakumari.From Gujarat To Anrunachal Pradesh,From Beaches in the sunshine to Desert of scorching heat,From The food to stay,Everything in one Website .</p>
         <div class="cta-row">
